# chatSG

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SECURITY_QUICK_ACTION_CHECKLIST.md  SECURITY_VULNERABILITY_REPORT.md  STREAMING_FIX_SUMMARY.md  chatsg-workflow-diagram.md  deploy  ecosystem.config.js  llm-context-debug.json  manual-deployment-steps.md  package-lock.json  package.json  quick-deploy.ps1  recreate-users.sql  shrimp-rules.md  test-frontend-streaming.html  test-streaming.html  test3.txt
.claude/: .env.example  settings.json
.claude/commands/: backend-logs.md  context-inject.md  frontend-logs.md  restart-servers.md  server-status.md  test-chat.md
.claude/hooks/: notification.py  stop.py
.cursor/: mcp.json
.cursor/rules/: don-t-do-list.mdc
PRDs/: current.md
PRP/: Ideas.md  database-current-state.md  user-auth-prp.md  user-auth-summary.md
PRP/Defered/: csrf-implementation-research.md
PRP/OLD/: markdown-formatting-feature.md
PRP/templates/: prp_base.md
PRPs/: README.md  mem-vis-prp.md  memory-visualization-implementation.md
PRPs/Complete/: crm-integration.md  user-auth-prp.md
backend/: .env.example  .env.sample  AGENT-INTEGRATION-GUIDE.md  AUTH_DEBUG_ENDPOINTS.md  LLM-HELPER-GUIDE.md  PROMPT-SYSTEM-EXAMPLES.md  PROXY_FIX_SUMMARY.md  SYSTEM_DEBUG_ENDPOINTS.md  env-example.txt  env.production.sample  memory.db  nodemon.json  package-lock.json  package.json  server.js  test-agent-architecture.js  test-agents-with-env.js  test-analytical-agent.js  test-auth-comprehensive.js  test-auth-config.js  test-auth-curl.sh  test-auth-local.js  test-customer-support-agency.js  test-individual-agents-direct.js  test-lazy-agent-manager.js  test-lazy-orchestrator.js  test-llm-agents.js  test-orchestrator.js  test-proxy-headers.js  tsconfig.json  vector_store.db
backend/PRDs/: current.md
backend/agent/: agent-config-template.json
backend/config/: auth.config.js  markdown.config.json  markdown.config.schema.json  security.config.js  slash-commands.json
backend/docs/: API.md  crm-api-reference.md  crm-fixes-summary.md  enhanced-llm-helper.md  mem0-pgvector-migration.md  mem0-qdrant-architecture.md  performance-analysis.md  tool-streaming-guide.md
backend/middleware/: errorHandler.js  http-adapter.js
backend/python-mem0/: README.md  ecosystem.config.js  pyproject.toml  requirements.txt  run-service.sh
backend/python-mem0/scripts/: start.sh
backend/python-mem0/src/: __init__.py  config.py  main.py  mem0_service.py
backend/python-mem0/tests/: README.md  conftest.py  test_mem0_service.py
backend/scripts/: README.md  dev-agent.js  generate-agent.js  setup-mem0-pgvector.sh
backend/src/agents/: index.ts  (+3 more)
backend/tests/: README.md  SECURITY_TEST_REPORT.md  check-env.js  check-mem0-azure-config.js  check-mem0-config.js  check-mem0-fallback.js  check-pgvector-tables.js  compare-mem0.sh  debug-llm-init.js  debug-mem0.js  mem0-performance-test.sh  run-migration-test.js  run-organized-tests.js  run-tests.js  simple-perf-demo.js  test-agent-architecture.js  test-agent-prompts.js  test-agent-router-integration.js  test-agent-router.js  test-agent-streaming.js  test-agent-zero.js  test-all-backends.js  test-all-security.js  test-api-memory-flow.js  test-chat-fixes.js  test-chat-performance.js  test-complete-memory.js  test-cross-session-memory.js  test-csrf-only.js  test-csrf-reuse.js  test-enhanced-llm-helper.js  test-helper.js  test-live-memory.js  test-llm-helper-integration.js  test-mem0-azure.js  test-mem0-debug.js  test-mem0-direct.js  test-mem0-env-azure.js  test-mem0-final.js  test-mem0-fix.js  (+29 more)
backend/utils/: llm-helper.js
database/: README.md
docs/: AGENT_DEVELOPMENT_GUIDE.md  CHAT_PERSISTENCE_GUIDE.md  CRITICAL_RACE_CONDITION_FIX.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  ENHANCED_LLM_HELPER_SUMMARY.md  FRONTEND_ARCHITECTURE.md  LAZY_AGENT_SYSTEM.md  LESSON_LEARNED_NODEMON_FILE_WATCHING.md  MARKDOWN_AND_SECURITY_IMPLEMENTATION.md  MIGRATION_GUIDE.md  PARALLEL_CHAT_TEST_VERIFICATION.md  SECURITY_CONFIGURATION.md  STREAMING_TROUBLESHOOTING.md  TESTS_CHANGELOG.md  TESTS_README.md  TOOL_STREAMING_IMPLEMENTATION.md  auth-deployment-guide.md  azure-gateway-ssl-architecture.md  crm-data-model.md  crm-deployment.md  crm-documentation-index.md  crm-integration.md  crm-security.md  crm-slash-command.md  crm-testing.md  crm-usage-examples.md  deployment-python-service.md  enhanced-llm-helper.md  manual-deployment-steps.md  mcp-server-management.md  streaming-implementation.md  streaming-state-management.md
docs/security/: AZURE-AD-GCC-HIGH-SETUP.md  SECURITY-REGRESSION-TESTS.md  TROUBLESHOOTING-GUIDE.md  USER-AUTH-IMPLEMENTATION.md
frontend/: RACE_CONDITION_FIX_DOCUMENTATION.md  index.html  package-lock.json  package.json  shrimp-rules.md  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: test-sidebar-pin-collapse.js
scripts/: cleanup-for-github.sh  deploy-production.ps1  deploy-update.ps1  deploy.ps1  deploy.sh  nginx.conf.template  setup-docker-containers.ps1  setup-vm.sh  start-servers.sh  stop-servers.sh  update.sh  view-logs.sh
shrimp-data/: WebGUI.md  tasks.json
shrimp-data/chatSG/: WebGUI.md
shrimp-data/memory/: tasks_memory_2025-06-16T19-21-05.json  tasks_memory_2025-06-18T19-51-23.json  tasks_memory_2025-06-18T20-53-21.json  tasks_memory_2025-06-18T21-58-10.json  tasks_memory_2025-06-18T22-45-41.json  tasks_memory_2025-06-18T23-23-27.json  (+8 more)
(+442 files in other folders)
